--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <div class="container">
         <h1>Puzzle Game for Kids</h1>
+        <div id="question"></div>
         <div id="game-board"></div>
         <button id="start-game">Start Game</button>
         <div id="score">Score: 0</div>
