--- a/index.html
+++ b/index.html
@@ -3,15 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>What Comes After?</title>
+    <title>What Comes Next & Road Signs</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>Reyom welcome. Let's play What Comes After Game.</h1>
+        <h1>Reyom welcome. Let's play!</h1>
         <p id="question"></p>
-        <input type="text" id="answer" placeholder="Your answer here">
-        <button onclick="checkAnswer()">Submit</button>
+
+        <!-- Number & Alphabet Answer Box -->
+        <div id="text-answer">
+            <input type="text" id="answer" placeholder="Your answer here">
+            <button onclick="checkAnswer()">Submit</button>
+        </div>
+
+        <!-- Multiple Choice Buttons (For Road Signs) -->
+        <div id="multiple-choice" style="display: none;">
+            <img id="sign-image" src="" alt="Road Sign">
+            <div id="options"></div>
+        </div>
+
         <p id="response"></p>
     </div>
     <script src="script.js"></script>
