--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <!-- Multiple Choice Buttons (For Road Signs) -->
         <div id="multiple-choice" style="display: none;">
-            <img id="sign-image" src="" alt="Road Sign">
+            <div id="sign-box"></div>
             <div id="options"></div>
         </div>
 
